# defeaturing_app

./: .env.example  .gitignore  README.md  docker-compose.yml  main_start.py
backend/: Dockerfile  pyproject.toml
backend/app/: config.py  main.py
backend/app/analysis/: __init__.py  clustering.py  context.py  pairing.py  pipeline.py  vec.py
backend/app/analysis/detectors/: __init__.py  base.py  boss.py  chamfer.py  fillet.py  hole.py  pocket.py  rib.py  slot.py  unknown.py
backend/app/api/: analysis.py  features.py  geometry.py  projects.py  report.py
backend/app/domain/: enums.py  models.py
backend/app/geometry/: __init__.py  tessellate.py
backend/app/importers/: __init__.py  base.py  occ_utils.py  registry.py  step_importer.py
backend/app/llm/: __init__.py  base.py  claude.py  null.py  prompts.py
backend/app/reporting/: __init__.py  html_bundle.py  pdf.py  screenshots.py
backend/app/storage/: db.py  files.py
backend/app/tasks/: worker.py
backend/app/testing/: bodies.py  fixtures.py  generate_testdata.py  step_io.py
backend/tests/: conftest.py  synthetic.py  test_analysis_pipeline.py  test_api_analysis.py  test_api_projects.py  test_fixtures.py  test_reporting.py  test_step_importer.py  test_tessellation.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css  store.ts  types.ts
frontend/src/components/: FeatureDetail.tsx  FeatureList.tsx  UploadForm.tsx  Viewer.tsx
